tests/lean/termination_by.lean.expected.out
termination_by.lean:8:0-8:22: error: invalid 'termination_by' in mutually inductive datatype declaration
termination_by.lean:13:1-13:23: error: invalid 'termination_by' in 'mutual' block, it must be used after the 'end' keyword
termination_by.lean:22:15-22:22: error: unused 'termination_by' element
termination_by.lean:29:15-29:22: error: unused 'termination_by' element
termination_by.lean:36:2-36:3: error: function 'h' not found in current declaration
termination_by.lean:54:7-54:14: error: invalid 'termination_by' element, 'Test.g' and 'Test.f' are in the same clique
